--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.6.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.3.8",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.439.0",
-    "next": "14.2.8",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
