--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@clerk/nextjs": "^5.6.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.3.8",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.439.0",
+    "mongodb": "^6.9.0",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
@@ -29,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
