--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.16.2",
+    "lucide": "^0.451.0",
     "lucide-react": "^0.439.0",
     "mongodb": "^6.9.0",
     "next": "^14.2.13",
