Stripe Payment Integration : Test, Debug phase

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^7.1.0",
     "class-variance-authority": "^0.7.0",
@@ -30,7 +32,7 @@
     "lucide": "^0.451.0",
     "lucide-react": "^0.439.0",
     "mongodb": "^6.9.0",
-    "next": "^14.2.13",
+    "next": "^14.2.16",
     "next-cloudinary": "^6.14.2",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -38,6 +40,7 @@
     "react-hook-form": "^7.53.0",
     "recharts": "^2.13.0",
     "sonner": "^1.5.0",
+    "stripe": "^17.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
